--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <!-- this is the list section -->
             </ul>
         </div>
-        <script src="backend.js"></script>
+        <script src="scripts/backend.js"></script>
 </body>
 
 </html
